2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.6.0 

	* mf/feta-bolletjes.mf: use resolution independent variables.

2002-08-19  janneke  <janneke@blauw.xs4all.nl>

	* regular-spacing-engraver.cc:
	* scm/grob-property-description.scm: Remove regular-distance-to.

	* input/test/spacing-regular.ly:
	* lily/regular-spacing-engraver.cc: Remove.

2002-08-18  janneke  <janneke@blauw.xs4all.nl>

	* mensural-ligature.cc: *** empty log message ***

	* tab-note-heads-engraver.cc: * lily/tab-note-heads-engraver.cc:
	* scm/translator-property-description.scm: Add tablatureFormat.

	* input/test/staff-bracket.ly: Update.

	* regular-spacing-engraver.cc:
	* lily/regular-spacing-engraver.cc: Add regular-distance-to.

	* ligature-bracket.cc, ligature-engraver.cc, ligature-head.cc, mensural-ligature-engraver.cc, mensural-ligature.cc:
		* lily/mensural-ligature-engraver.cc:
		* scm/grob-property-description.scm: Add head-width, join-left,
		primitive.

2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ambitus.cc, parser.yy:
	* Documentation/user/introduction.itely: small corrections.

	* lily/parser.yy (property_def): Ugh. Switch off
	internal-type-checking for autoBeamSettings.

2002-08-18  janneke  <janneke@blauw.xs4all.nl>

	* music.cc (internal_set_mus_property): [!NDEBUG] Remove, use
	abort instead of assert.

2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/grob-property-description.scm: Remove regular-distance-to.

	* input/test/spacing-regular.ly:
	* lily/regular-spacing-engraver.cc: Remove.
	
2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/mutopia/J.S.Bach/wtk1-fugue2.ly: staff switch fixes.

	* Documentation/user/lilypond-book.itely: small cleanups

	* Documentation/user/*.itely: fix overfull hboxes. 

2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (A piano excerpt): 
	* Documentation/user/introduction.itely (Introduction): Typo fix.
